[gd_scene load_steps=12 format=3 uid="uid://ctnfodosbhnnl"]

[ext_resource type="Script" path="res://nodos/puerta.gd" id="1_ari2d"]
[ext_resource type="Material" uid="uid://dhx566ge5iu3l" path="res://assets/Models/textures/M_InteriorChairDoor.tres" id="2_fyde3"]
[ext_resource type="FontFile" uid="uid://bxhbbvy48ryly" path="res://Fuente/VCR_OSD_MONO_1.001.ttf" id="3_6a7h0"]
[ext_resource type="ArrayMesh" uid="uid://baaidl75kthhq" path="res://assets/Models/Object/Door_interact.tres" id="3_jidmi"]
[ext_resource type="AudioStream" uid="uid://bc2qlb430kvxn" path="res://audio/Door_Open.ogg" id="5_cv5w1"]
[ext_resource type="AudioStream" uid="uid://i0auv7sec2y3" path="res://audio/Door_Closed.ogg" id="6_vahrl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_efd0x"]
size = Vector3(1.2473, 2.50274, 0.499009)

[sub_resource type="BoxShape3D" id="BoxShape3D_a0feh"]
size = Vector3(2.04436, 2.87572, 2.5397)

[sub_resource type="Animation" id="Animation_ytpav"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fadeout/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fadeout/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_35qql"]
resource_name = "fadeout"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fadeout/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fadeout/ColorRect:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ax2b"]
_data = {
"RESET": SubResource("Animation_ytpav"),
"fadeout": SubResource("Animation_35qql")
}

[node name="Puerta" type="Node3D"]
script = ExtResource("1_ari2d")

[node name="pivote" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02644, -0.430852, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="pivote"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02644, 0.430852, 0)
collision_layer = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="pivote/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.10045, 0)
shape = SubResource("BoxShape3D_efd0x")

[node name="MeshInstance3D" type="MeshInstance3D" parent="pivote/StaticBody3D/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.846411, -1.52585, 0)
material_override = ExtResource("2_fyde3")
mesh = ExtResource("3_jidmi")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02017, 0)
shape = SubResource("BoxShape3D_a0feh")

[node name="Ray_frente" type="RayCast3D" parent="."]
transform = Transform3D(-0.0199827, 0, -0.9998, 0, 1, 0, 0.9998, 0, -0.0199827, 0.993951, 0.738662, 0.963957)
target_position = Vector3(0, 0, 2)

[node name="Ray_espalda" type="RayCast3D" parent="."]
transform = Transform3D(0.0120774, 0, 0.999927, 0, 1, 0, -0.999927, 0, 0.0120774, 0.97071, 0.677553, -0.756656)
target_position = Vector3(0, 0, -2)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -538.0
offset_top = 261.0
offset_right = 538.0
offset_bottom = 355.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.521569)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -17.0
offset_right = 189.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_6a7h0")
theme_override_font_sizes/font_size = 35
text = "Cerrado con llave."

[node name="Fadeout" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8ax2b")
}

[node name="ColorRect" type="ColorRect" parent="Fadeout"]
visible = false
modulate = Color(1, 1, 1, 0)
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="Open" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_cv5w1")
bus = &"FX"

[node name="Closed" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_vahrl")
bus = &"FX"

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="animation_finished" from="Fadeout" to="." method="_on_fadeout_animation_finished"]
